--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-  Welcome <%= current_user.name %>!
+  Welcome <%= current_user.nickname %>!
   <%= link_to "Sign Out", signout_path %>
 <% else %>
   <%= link_to "Sign in with Twitter", "/auth/twitter" %>
